# homebaker

./: .env-template  .gitignore  README.md  aws.py  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
docs/: Homebaker_FlowChart.drawio
homebaker/: asgi.py  settings.py  urls.py  wsgi.py
treats/: admin.py  apps.py  aws.py  forms.py  models.py  urls.py  utils.py  views.py
treats/migrations/: 0001_initial.py  0002_alter_treat_rating.py  0002_remove_treat_picture_treat_picture_link_and_more.py  0003_alter_treat_rating.py  0004_rename_updated_note_edited_remove_note_publish_and_more.py  0005_alter_treat_cover_img.py  0006_alter_treat_cover_img.py  0007_alter_treat_user.py  0008_alter_treat_cover_img.py  0009_alter_treat_rating.py  0010_alter_treat_slug.py  0011_remove_treat_treats_trea_rating_84ecf9_idx_and_more.py  0012_treat_recipe_source.py  0013_alter_treat_recipe_source.py  0014_coupon_coupon_treats_coup_created_45212d_idx.py  0015_coupon_status.py  0016_rename_coupon_fields.py  0016_rename_reason_for_coupon_coupon_reason_and_more.py  0017_alter_coupon_recipient_alter_coupon_target_date_and_more.py  0018_profile.py  0019_alter_profile_is_baker_user.py  0020_coupon_redemption_date.py  0021_alter_treat_rating_alter_treat_recipe_source.py  0022_treat_is_recipient_request_alter_treat_rating_and_more.py  0023_alter_treat_options_and_more.py  0024_event.py  0025_remove_event_recipient_alter_event_coupon_and_more.py  0026_alter_treat_options_and_more.py  0027_delete_event.py  0028_alter_coupon_status.py
treats/static/css/: style.css
(+19 files in other folders)
