[tool.poetry]
name = "homebaker"
version = "0.1.0"
description = ""
authors = ["Adam Doty <acdoty15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-bootstrap-v5 = "^1.0.11"
django-bootstrap-icons = "^0.8.1"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
python-decouple = "^3.6"
dj-database-url = "^1.0.0"
boto3 = "^1.26.9"
psycopg2-binary = "^2.9.5"
pgcli = "^3.5.0"
Pillow = "^9.3.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
