[tool.poetry]
name = "homebaker"
version = "0.1.0"
description = ""
authors = ["Adam Doty <acdoty15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-bootstrap-v5 = "^1.0.11"
django-bootstrap-icons = "^0.8.2"
pgcli = "^3.5.0"
psycopg2-binary = "^2.9.5"
pillow = "^9.3.0"
boto3 = "^1.26.11"
python-decouple = "^3.6"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
dj-database-url = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
